<resources>
    <string name="app_name">My Nirvana</string>
    <string-array name="quotes_array">
        <item>«Если вы не победите себя, тогда будете побеждены самим собой».\nНаполеон Хилл</item>
        <item>«Выбери профессию, которую ты любишь, — и тебе не придется работать ни дня в твоей жизни».\nКонфуций</item>
        <item>«Самое большое препятствие — страх. Самая большая ошибка — пасть духом».\nДжон Вуден</item>
        <item>«Успеха добивается лишь тот, кто остается после того как все остальные уходят».\nУильям Фидер</item>
        <item>«Последняя степень неудачи — это первая ступень успеха».\nКарло Досси</item>
        <item>«Лучше сделать и пожалеть, чем не сделать и пожалеть дважды».\nГрейс Хоппер</item>
        <item>«Осуществляйте свои мечты, или кто-то наймет вас для осуществления своих».\nФарра Грей</item>
        <item>«Через год ты можешь пожалеть, что не начал сегодня!».\nКарен Лэм</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meditation_course">MeditationCourseActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="login">Вход</string>
    <string name="enter_your_email">Введите ваш email</string>
    <string name="enter_your_password">Введите ваш пароль</string>
    <string name="course_name">Название курса</string>
    <string name="reset_progress_of_course">Сбросить прогресс по курсу</string>
    <string name="meditation_settings">Настройка медитации</string>
    <string name="meditation_name">Название медитации</string>
    <string name="end_sound">Звук окончания</string>
    <string name="guitar">Гитара</string>
    <string name="background_sound">Фоновый звук</string>
    <string name="fire">Огонь</string>
    <string name="time">Время</string>
    <string name="minutes5">5:00 минут</string>
    <string name="start_meditation">Начать медитацию</string>
    <string name="save_meditation">Сохранить медитацию</string>
    <string name="meditation_timer">Таймер медитации</string>
    <string name="meditation">Медитация</string>
    <string name="time545">5:45</string>
    <string name="rain">Дождь</string>
    <string name="pomodoro_settings">Настройка помодоро таймера</string>
    <string name="timer_name">Название таймера</string>
    <string name="work_time">Время работы</string>
    <string name="minute25">25:00 минут</string>
    <string name="relax_time">Время отдыха</string>
    <string name="circles_quantity">Кол-во кругов</string>
    <string name="start_timer">Начать таймер</string>
    <string name="save_timer">Сохранить таймер</string>
    <string name="pomodoro_timer">Помодоро таймер</string>
    <string name="work">Работа</string>
    <string name="_1_4">1/4</string>
    <string name="my_nirvana">Добро пожаловать в My Nirvana!</string>
    <string name="registration">Регистрация</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="already_registrated">Уже зарегистрированы?</string>
    <string name="sign_in">Войти</string>
    <string name="create_new_task">Создать новую задачу</string>
    <string name="task_name">Название задачи</string>
    <string name="task_type">Вид задачи</string>
    <string name="task">Разовая</string>
    <string name="_14_00">14:00</string>
    <string name="date">Дата</string>
    <string name="today">Сегодня</string>
    <string name="notification">Напоминание</string>
    <string name="notification_time">Время напоминания</string>
    <string name="notification_date">Дата напоминания</string>
    <string name="save_task">Сохранить задачу</string>
    <string name="sure_to_end_meditation">Вы уверены, что хотите завершить медитацию?</string>
    <string name="sure_to_end_meditation_course">Вы уверены, что хотите завершить медитацию? Прогресс в курсе, по ней, не будет сохранен</string>
    <string name="end">Закончить</string>
    <string name="end_pomodoro_timer">Вы уверены, что хотите завершить помодоро таймер?</string>
    <string name="save_habit">Вы успешно сохранили привычку медитация\"</string>
    <string name="back_to_menu">Вернуться в меню</string>
    <string name="greetings">Здравствуй, Павел!</string>
    <string name="quote">Живи и ошибайся. В этом жизнь.\nРичард Олдингтон</string>
    <string name="ready_meditations">Готовые медитации</string>
    <string name="your_meditations">Ваши медитации</string>
    <string name="ready_timers">Готовые помодоро таймеры</string>
    <string name="your_timer">Ваши помодоро таймеры</string>
    <string name="create_timer">Cоздать помодоро таймер</string>
    <string name="meditation_courses">Курсы медитаций</string>
    <string name="create_meditation">Создать медитацию</string>
    <string name="course_completed">Вы полностью прошли курс {название курса}!</string>
    <string name="reset_progress_auto">Прогресс по данному курсу будет автоматически сброшен, вы сможете пройти его еще раз</string>
    <string name="back_to_meditation">Вернуться на экран медитаций</string>
    <string name="meditation_end">Медитация закончена!</string>
    <string name="time_meditation_completed">Вы медитировали {time}!</string>
    <string name="back_to_main_menu">Вернуться в главное меню</string>
    <string name="run_meditation_one_more_time">Запустить медитацию еще раз</string>
    <string name="meditation_completed">Медитация пройдена!</string>
    <string name="back_to_course">Вернуться к курсу</string>
    <string name="timer_end">Помодоро таймер закончен!</string>
    <string name="productivity_relax">Желаем продуктивного отдыха!</string>
    <string name="your_habits">Ваши привычки</string>
    <string name="productivity">Продуктивность</string>
    <string name="today_task">Сегодняшние дела</string>
    <string name="chose_date">Выбрать дату</string>
    <string name="chose_quantity">Выберите количество кругов</string>
    <string name="timer_saved">Вы успешно сохранили таймер!</string>
    <string name="start_right_now_timer">Хотите начать его прямо сейчас?</string>
</resources>