<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".presentation.activities.tasks.TaskCreatorActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/timeOfTaskButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/_14_00"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeOfTaskButton" />

            <TextView
                android:id="@+id/typeOfTaskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/task_type"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskNameEditTextLayout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dateOfTaskButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/today"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeOfTaskButton" />

            <ImageButton
                android:id="@+id/backToProductivityFragmentButtonInCaseCreator"
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/timeOfTaskInCreatorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeOfTaskTV" />

            <TextView
                android:id="@+id/dateOfTaskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeOfTaskInCreatorTV" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/typeOfTaskButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/task"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/taskNameEditTextLayout" />

            <TextView
                android:id="@+id/settingsTaskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/create_new_task"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backToProductivityFragmentButtonInCaseCreator" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveTaskButton"
                android:layout_width="0dp"
                android:layout_height="87dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/save_task"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfNotificationTV" />

            <TextView
                android:id="@+id/dateOfNotificationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notification_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeOfNotificationTV" />

            <TextView
                android:id="@+id/isNotificationNecessaryTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfTaskTV" />

            <TextView
                android:id="@+id/timeOfNotificationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/notification_time"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isNotificationNecessaryTV" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/timeOfNotificationButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="13:00"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isNotificationNecessaryButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/isNotificationNecessaryButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="ДА"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateOfTaskButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/dateOfNotificationButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/today"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeOfNotificationButton" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/taskNameEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsTaskTV">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/taskNameInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/button_background"
                    android:ems="10"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:hint="@string/task_name"
                    android:inputType="textPersonName"
                    android:maxLength="20"

                    android:textAlignment="center" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>